syntax = "proto3";
package elestodao.elesto.credential.v1;

option go_package = "github.com/elesto-dao/elesto/v2/x/credential";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";





message CredentialDefinition {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  // the credential definition did
  string id = 1;

  // the did of the publisher of the credential
  string publisherId = 2;

  // The credential data schema.
  // The schema can be large, verbose, and expensive, but must not be compressed since
  // it is used by the msg_server to verify public credentials and if zipped, will open
  // the node to a zip bomb attack vector
  bytes schema =3;

  // the credential json-ld vocabulary
  // The vocabulary can be large, verbose, and expensive, but must not be compressed since
  // it is used by the msg_server to verify public credentials and if zipped, will open
  // the node to a zip bomb attack vector
  bytes vocab = 4;

  // the human readable name of the credential, must be included
  // in the type of the issued credential
  string name = 5;

  // the description of the credential, such as it's purpose
  string description = 6 [(gogoproto.nullable) = true];

  // wherever the credential is intended for public use (on-chain) or not (off-chain)
  // if the value is true, then the module can issue a credential
  // if the value is false, then the module will forbid the issuance of the credential
  bool isPublic = 7;

  // DID of the credential is replaced by something else
  string supersededBy = 8 [(gogoproto.nullable) = true];

  // the credential can be de-activated
  bool isActive = 9;
}



// DidMetadata defines metadata associated to a did document such as
// the status of the DID document
message PublicVerifiableCredential {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  // json-ld context
  repeated string context  = 1 [(gogoproto.jsontag) = "@context,omitempty"];

  // the credential id
  string id = 2;

  // the credential types
  repeated string type = 3;

  // the DID of the issuer
  string issuer =  4;

  // the date-time of issuance
  google.protobuf.Timestamp issuanceDate = 5 [(gogoproto.stdtime) = true];

  // the date-time of expiration
  google.protobuf.Timestamp expirationDate = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];

  // credential status for the revocation lists
  CredentialStatus credentialStatus = 7 [(gogoproto.nullable) = true];


  // the subject of the credential
  // the preferred way to handle the subject will be to use the Struct type
  // but at the moment is not supported
  // google.protobuf.Struct credentialSubject = 7;
  bytes credentialSubject = 8;

  // One or more cryptographic proofs that can be used to detect tampering
  // and verify the authorship of a credential or presentation. The specific
  // method used for an embedded proof MUST be included using the type property.
  Proof proof = 9;
}



// The Proof message represents a cryptographic proof that the
// credential has not been tampered with or changed without the issuers
// knowledge. This message can be used to verify the verifiable credential.
message Proof {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  string type = 1;
  string created = 2;
  string proof_purpose = 3;
  string verification_method = 4;
  string signature = 5;
}

// CredentialStatus implement support for bitstring-based revocation lists
// as described here: https://w3c-ccg.github.io/vc-status-rl-2020/#revocationlist2020status
message CredentialStatus {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters)  = false;

  string id = 1;
  string type = 2;
  int32 revocationListIndex = 3;
  string revocationListCredential = 4;
}

message ProposePublicCredentialID{
  string title = 1;
  string description = 2;
  string credentialDefinitionID = 3;
}
